Cabal-Version: >= 1.8

Name:     pointfree
Version:  1.1.1.6
Category: Tool
Synopsis: Tool for refactoring expressions into pointfree form

Description:
    The pointfree tool is a standalone command-line version of the pl
    plugin for lambdabot.

Author:       Thomas Jäger
Maintainer:   Ben Millwood <thebenmachine+git@gmail.com>
License:      OtherLicense
License-file: LICENSE

Extra-source-files: ChangeLog README test/Test.hs

Build-type:  Simple
Tested-with: GHC == 8.6.4

Source-repository head
  type:     git
  location: git://github.com/bmillwood/pointfree.git

Library
  Exposed-modules: Pointfree

  Build-depends: base >= 4.5 && < 4.13,
                 array >= 0.3 && < 0.6,
                 containers >= 0.4 && < 0.7,
                 haskell-src-exts >= 1.20 && < 1.21,
                 transformers < 0.6
  Other-modules: Plugin.Pl.Common
                 Plugin.Pl.Parser
                 Plugin.Pl.PrettyPrinter
                 Plugin.Pl.Optimize
                 Plugin.Pl.Rules
                 Plugin.Pl.Transform
  GHC-options: -W

Executable pointfree
  Main-is:       Main.hs
  GHC-options:   -W
  Build-depends: base >= 4.5 && < 4.13,
                 array >= 0.3 && < 0.6,
                 containers >= 0.4 && < 0.7,
                 haskell-src-exts >= 1.20 && < 1.21,
                 transformers < 0.6
  Other-modules: Plugin.Pl.Common
                 Plugin.Pl.Parser
                 Plugin.Pl.PrettyPrinter
                 Plugin.Pl.Optimize
                 Plugin.Pl.Rules
                 Plugin.Pl.Transform

Test-suite tests
  Type: exitcode-stdio-1.0

  Main-is: Test.hs
  Other-modules: Plugin.Pl.Common
                 Plugin.Pl.Parser
                 Plugin.Pl.PrettyPrinter
                 Plugin.Pl.Optimize
                 Plugin.Pl.Rules
                 Plugin.Pl.Transform

  Build-depends:
    base >= 4.5 && < 4.13,
    array >= 0.3 && < 0.6,
    containers >= 0.4 && < 0.7,
    haskell-src-exts >= 1.20 && < 1.21,
    HUnit >= 1.6 && < 1.7,
    QuickCheck >= 2.11 && < 2.13,
    transformers < 0.6

  GHC-Options:    -W
  Hs-source-dirs: . test
